[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mypwd"
version = "0.7.2"
description = "Very simple password vault for Python projects"
readme = "README.md"
license = "GPL-3.0"
authors = [
    { name = "Jaroslav Beran", email = "jaroslav.beran@gmail.com" }
]
requires-python = ">=3.6"
dependencies = []

[project.urls]
Homepage = "https://github.com/berk76/mypwd"
Repository = "https://github.com/berk76/mypwd"
Issues = "https://github.com/berk76/mypwd/issues"

[dependency-groups]
dev = [
    "flake8>=4.0.1",
    "mypy>=0.971",
    "pytest>=7.0.1",
    "pytest-cov>=4.0.0",
]

[project.scripts]
mypwd = "mypwd.cli:main"
