[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mypwd"
version = "0.9.0"
description = "Very simple password vault for Python projects"
readme = "README.md"
license = "GPL-3.0"
authors = [
    { name = "Jaroslav Beran", email = "jaroslav.beran@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.urls]
Homepage = "https://github.com/berk76/mypwd"
Repository = "https://github.com/berk76/mypwd"
Issues = "https://github.com/berk76/mypwd/issues"

[dependency-groups]
dev = [
    "pre-commit>=2.1.1",
    "pytest>=7.0.1",
    "pytest-cov>=4.0.0",
]

[project.scripts]
mypwd = "mypwd.cli:main"

[tool.hatch.build]
exclude = [
    ".github/*",
    "tests/*",
    "*.md"
]

[tool.ruff]
line-length = 119
indent-width = 4

[tool.ruff.lint]
# Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E4", "E7", "E9", "F", "B"]

# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

# Ignore `E402` (import violations) in all `__init__.py` files, and in selected subdirectories.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
# Preserve quotes in `ruff format`.
quote-style = "preserve"
